fix: Sticky toolbar cut off in Minimal and other themes #413

--- a/styles.css
+++ b/styles.css
@@ -1330,6 +1330,15 @@ body {
     &.is-mobile {
         --cg-nt-fab-border-color: var(--interactive-accent);
     }
+
+    /* fix: adjustments for various themes #413 */
+    &[data-ntb-csstheme="Cupertino"], &[data-ntb-csstheme="Minimal"] {
+        --cg-nt-tbar-top-sticky-pos-desktop: calc(var(--header-height) * -1 + 16px);      
+    }
+    &[data-ntb-csstheme="Velocity"] {
+        --cg-nt-tbar-top-sticky-pos-desktop: calc(var(--header-height) * -1 + 22px);      
+    }
+
 }
 
 /* #endregion */
